@@ -30,6 +30,9 @@
 	src/formats/Makefile.am, src/formats/Makefile.in: Update to allow
 	using precompiled headers again.
 
+	* src/canon.cpp, src/formats/cansmilesformat.cpp: Fix crash caused
+	by linking problem. CanonicalLabels() moved to the Open Babel namespace.
+
 2007-02-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/forcefield.cpp: UpdateCoordinates now 'knows' about conformers
